--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,14 @@
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
-
-
-
+      
       <h1>Próba</h1>
-      <div style="display:flex;flex-flow:wrap;">
-        <div *ngFor="let product of data$ | async" style="border:100px;padding:1rem;width:20%;float:left;">
-          <img [src]="'/assets/art/'+product.image+'!PinterestSmall.jpg'" width="100%">
-          <strong>{{ product.name }}</strong>
-          <br>{{ product.description }}
-          <br>{{ product.price }}
-          <br>{{ product.stock }}
-          <br>{{ product.active }}
-          <br>{{ product.featured }}
+      <div class="container">
+        <div class="row">
+          <app-product-card *ngFor="let product of data$ | async" [product]="product"></app-product-card>
         </div>
       </div>
+      
     </div>
   </div>
 </div>
