--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -1,7 +1,5 @@
 .modal-container {
   display: flex;
-  // box-sizing: border-box;
-  // border: 10px solid red;
   align-items: center;
   justify-content: center;
   font-size: 2rem;
@@ -9,9 +7,9 @@
   top: 0;
   left: 0;
   z-index: 10000;
-  width: 99vw;
+  width: 100vw;
   height: 100vh;
-  background-color: #0004;
+  background-color: white;
   .modal-inner {
     display: block;
     align-items: center;
@@ -29,7 +27,6 @@
     }
   }
 }
-
 
 .hidden {
   display: none;
