--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<app-navigation></app-navigation>
+<app-navigation>
+  <div></div>
+</app-navigation>
 <div class="container mt-3">
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
-      
+      <app-product-list></app-product-list>
       <h1>Próba</h1>
       <div class="container">
         <div class="row">
-          <app-product-card *ngFor="let product of data$ | async" [product]="product"></app-product-card>
+          <app-product-card
+            *ngFor="let product of data$ | async"
+            [product]="product"
+          ></app-product-card>
         </div>
       </div>
-      
     </div>
   </div>
 </div>
