--- a/src/app/product-carousel/product-carousel/product-carousel.component.html
+++ b/src/app/product-carousel/product-carousel/product-carousel.component.html
@@ -1,9 +1,5 @@
 <div class="container-fluid">
-    <div class="row row-cols-5">
-        <div class="col">1</div>
-        <div class="col">2</div>
-        <div class="col">3</div>
-        <div class="col">4</div>
-        <div class="col">5</div>        
+    <div class="row row-cols-5" *ngFor="let product of products">
+        <div class="col">{{ product }}</div>                
     </div>
 </div>
