--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,17 @@
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
-      <app-product-list></app-product-list>
+      <app-product-list [products]="products"></app-product-list>
       <h1>Próba</h1>
-      <div class="container">
+
+      <!-- <div class="container">
         <div class="row">
           <app-product-card
             *ngFor="let product of data$ | async"
             [product]="product"
           ></app-product-card>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
