--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
+/* Product card */
+.modal-inner img {
+    height: 10rem;
+    width: 10rem;
+    object-fit: cover;
+}
