--- a/src/app/common/special-offer-list/special-offer-list.component.html
+++ b/src/app/common/special-offer-list/special-offer-list.component.html
@@ -1,10 +1,12 @@
+<h2>Akciós termékek</h2>
 <div class="container d-flex">
   <div class="row col-12 justify-content-center">
-    <p>special-offer-list works!</p>
-
     <ng-container
       *ngFor="
-        let product of products | filter: { specialOffer: true } | slice: 0:5
+        let product of products
+          | filter: { specialOffer: true }
+          | random
+          | slice: 0:5
       "
     >
       <app-product-card [product]="product"> </app-product-card>
