--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="card m-3" style="width: 18rem;">
+<div class="card m-3 h-100" style="width: 18rem;">
   <img [src]="imageUrl" class="card-img-top" [alt]="product.name" (click)="onImageClick()">
   <div class="card-body">
     <h5 class="card-title">{{ product.name }}</h5>
