--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navigation>
   <div></div>
 </app-navigation>
-<div class="container mt-3">
+<div class="container-fluid mt-3">
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
@@ -12,6 +12,8 @@
       <app-product-list [products]="products"></app-product-list>
 
       <h1>Próba</h1>
+
+      <app-data-editor ></app-data-editor>
 
       <!--
       <div class="container">
