--- a/src/app/common/data-editor/data-editor.component.scss
+++ b/src/app/common/data-editor/data-editor.component.scss
@@ -2,8 +2,20 @@
   input {
     width: 100%;
   }
+  input[type="number"] {
+    width: 7em;
+  }
+  input.catId, input.stock {
+    width: 4em;
+  }
   thead tr th {
     user-select: none;
-    cursor: pointer;
+    i {
+      margin-left: .25em;
+      cursor: pointer;
+    }
+    i.fa-sort {
+      color: lightgray;
+    }
   }
 }
