data-editor igazítások, navigation icon-ok

--- a/src/app/common/data-editor/data-editor.component.html
+++ b/src/app/common/data-editor/data-editor.component.html
@@ -28,9 +28,9 @@
       </td>
       <td>
         <div class="btn-group">
-          <button [disabled]="disabled" class="btn btn-secondary">Reread</button>
-          <button [disabled]="disabled" class="btn btn-primary">Modify</button>
-          <button [disabled]="disabled" class="btn btn-danger">Delete</button>
+          <button [disabled]="disabled" (click)="onRead(product)" class="btn btn-secondary">Re-read</button>
+          <button [disabled]="disabled" (click)="onModify(product)" class="btn btn-primary">Modify</button>
+          <button [disabled]="disabled" (click)="onDelete(product)" class="btn btn-danger">Delete</button>
         </div>
       </td>
     </tr>
