--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -23,8 +23,10 @@
       <li *ngFor="let item of menuItems" class="nav-item">
         <a
           class="nav-link text-white"
-          [routerLink]="item.link"
-        >{{ item.text }}</a>
+          [routerLink]="item.link">
+            <i *ngIf="item.icon" [class]="['fa', item.icon]" ></i>
+            {{ item.text }}
+        </a>
       </li>
     </ul>
   </div>
