--- a/src/app/common/featured-list/featured-list.component.html
+++ b/src/app/common/featured-list/featured-list.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex">
-  <div class="row col-12 justify-content-center">
+  <div class="row row-cols-5 justify-content-center">
     <ng-container
       *ngFor="
         let product of products
