funcionális váz a json nélkül

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,12 @@
     <div class="col-12">
       <router-outlet></router-outlet>
 
-      <app-featured-list [products]="products"> </app-featured-list>
+      <!-- <app-featured-list [products]="products"> </app-featured-list>
       <app-special-offer-list [products]="products"></app-special-offer-list>
 
       <app-product-list [products]="products"></app-product-list>
 
-      <h1>Próba</h1>
+      <h1>Próba</h1> -->
 
       <!--
       <div class="container">
@@ -24,7 +24,7 @@
       </div>
 -->
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row flex-column">
           <h2>1</h2>
           <div *ngFor="let product of data$ | async | frontend: 2 | random">
@@ -82,7 +82,7 @@
             {{ product.name }} - {{ product.active }}
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
