funcionális váz a json nélkül v0.0.2

--- a/src/app/common/data-editor/data-editor.component.html
+++ b/src/app/common/data-editor/data-editor.component.html
@@ -42,5 +42,5 @@
   </tbody>
 </table>
 <div>
-  ( From {{ startIdx + 1 }}. to {{ endIdx }}. ) / {{products.length}} {{ theadRect }}
+  ( From {{ startIdx + 1 }}. to {{ endIdx }}. ) / {{products.length}}
 </div>
