--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
+<nav id="main-nav" class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
   <a
     class="navbar-brand"
     routerLink="/"
