--- a/src/app/common/product-list/product-list.component.html
+++ b/src/app/common/product-list/product-list.component.html
@@ -1,6 +1,4 @@
-<div class="container">
-
-  <nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light">
     <form class="form-inline w-100">
 
       Név:
@@ -20,17 +18,18 @@
       </div>
     </form>
   </nav>
+  <div class="container-flex">
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-5 justify-content-center">
 
-  <div class="row">
-
-    <ng-container *ngFor="let product of products | filter: {name:phrase} | sorter:order:direction">
-      <app-product-card [product]="product"> </app-product-card>
-    </ng-container>
-
-    <ng-container *ngIf="(products| filter: {name:phrase})?.length===0">
-      nincs találat
-    </ng-container>
-
-
+      <ng-container *ngFor="let product of products | filter: {name:phrase} | sorter:order:direction">
+        <app-product-card [product]="product"> </app-product-card>
+      </ng-container>
+  
+      <ng-container *ngIf="(products| filter: {name:phrase})?.length===0">
+        nincs találat
+      </ng-container>
+  
+  
+    </div>
   </div>
-</div>
+
