--- a/src/app/common/special-offer-list/special-offer-list.component.html
+++ b/src/app/common/special-offer-list/special-offer-list.component.html
@@ -1,6 +1,6 @@
 <h2>Akciós termékek</h2>
-<div class="container d-flex">
-  <div class="row col-12 justify-content-center">
+<div class="container-flex">
+  <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-5 justify-content-center">
     <ng-container
       *ngFor="
         let product of products
@@ -10,6 +10,6 @@
       "
     >
       <app-product-card [product]="product"> </app-product-card>
-    </ng-container>
+  </ng-container>
   </div>
 </div>
