--- a/src/app/page/cat02/cat02.component.html
+++ b/src/app/page/cat02/cat02.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-flex">
 
   <h1 *ngIf="name">{{ name }} kategória termékei</h1>
   <div class="row" *ngIf="products|async">
