--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,7 @@
-<app-featured-list [products]="products"> </app-featured-list>
-<app-special-offer-list [products]="products"></app-special-offer-list>
+<app-featured-list [products]="products" class="mb-5"> </app-featured-list>
+<app-special-offer-list [products]="products" class="mb-5"></app-special-offer-list>
 
-<app-product-list [products]="products"></app-product-list>
+<app-product-list [products]="products" class="mb-5"></app-product-list>
 
 
 <!-- <div class="container">
