--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,11 @@
 //   object-fit: cover;
 // }
 
+body {
+    box-sizing: border-box;    
+}
+
+.list-title {
+    color: rgba(9,9,121,1) ;
+    font-weight: bold;
+}
