--- a/src/app/common/featured-list/featured-list.component.html
+++ b/src/app/common/featured-list/featured-list.component.html
@@ -1,4 +1,4 @@
-<h2>Kiemelt termékek</h2>
+<h2 class="mt-3 mb-5 my-5 text-center list-title">Kiemelt termékek</h2>
 <div class="container-flex">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center">
     <ng-container *ngFor="
