--- a/src/app/common/product-list/product-list.component.html
+++ b/src/app/common/product-list/product-list.component.html
@@ -1,35 +1,33 @@
-<nav class="navbar navbar-light bg-light">
-    <form class="form-inline w-100">
+<h2 class="mt-3 my-5 text-center list-title">Terméklista</h2>
+<nav class="navbar navbar-light bg-light mx-0 my-5">
+  <form class="form-inline w-100">
 
-      Név:
-      <input [(ngModel)]="phrase" name="phrase" type="text" class="form-control ml-2 mr-4" />
+    Név:
+    <input [(ngModel)]="phrase" name="phrase" type="text" class="form-control ml-2 mr-4" />
 
-      <div class="ml-auto">
-        Rendezés:
-        <select [(ngModel)]="order" class="form-control ml-2 mr-4" name="order">
-          <option value="price">Ár</option>
-          <option value="name">Név</option>
-          <option value="featured">Kiemelt</option>
-        </select>
-        <select [(ngModel)]="direction" class="form-control ml-1" name="direction">
-          <option value="ascend">növekvő</option>
-          <option value="descend">csökkenő</option>
-        </select>
-      </div>
-    </form>
-  </nav>
-  <div class="container-flex">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center">
-
-      <ng-container *ngFor="let product of products | filter: {name:phrase} | sorter:order:direction">
-        <app-product-card [product]="product"> </app-product-card>
-      </ng-container>
-  
-      <ng-container *ngIf="(products| filter: {name:phrase})?.length===0">
-        nincs találat
-      </ng-container>
-  
-  
+    <div class="ml-auto">
+      Rendezés:
+      <select [(ngModel)]="order" class="form-control ml-2 mr-4" name="order">
+        <option value="price">Ár</option>
+        <option value="name">Név</option>
+        <option value="featured">Kiemelt</option>
+      </select>
+      <select [(ngModel)]="direction" class="form-control ml-1" name="direction">
+        <option value="ascend">növekvő</option>
+        <option value="descend">csökkenő</option>
+      </select>
     </div>
-  </div>
+  </form>
+</nav>
+<div class="container-flex">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center">
+    <ng-container *ngFor="let product of products | filter: {name:phrase} | sorter:order:direction">
+      <app-product-card [product]="product" class="mb-4"> </app-product-card>
+    </ng-container>
 
+    <ng-container *ngIf="(products| filter: {name:phrase})?.length===0">
+      nincs találat
+    </ng-container>
+  </div>
+  <div class="list-spacer"></div>
+</div>
