--- a/src/app/common/special-offer-list/special-offer-list.component.html
+++ b/src/app/common/special-offer-list/special-offer-list.component.html
@@ -1,4 +1,4 @@
-<h2>Akciós termékek</h2>
+<h2 class="mt-5 mb-3 my-5 text-center list-title">Akciós termékek</h2>
 <div class="container-flex">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center">
     <ng-container
