--- a/src/app/common/product-card/product-card.component.scss
+++ b/src/app/common/product-card/product-card.component.scss
@@ -1,20 +1,28 @@
 .card {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
   margin: 0 1rem 1rem 1rem;
+  transition: 0.3s all ease-in-out;
+
+  &:hover {
+    margin-top: -10px;
+  }
+
   img {
     cursor: pointer;
     height: 40%;
     width: 100%;
     object-fit: cover;
-  }  
+  }
 }
 
-.btn-gradient {
-  background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-  border: 2px rgba(9,9,121,1);
+.btn-gradient {  
+  background: linear-gradient(90deg, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);  
   border-radius: 0.5rem;
-  color: white!important;
+  color: white !important;
   width: 60%;
+  &:hover{
+    border:solid black 2px !important;
+    }
 }
 
 .modal-container {
@@ -29,6 +37,7 @@
   width: 100vw;
   height: 100vh;
   background-color: white;
+
   .modal-inner {
     display: block;
     align-items: center;
@@ -36,11 +45,13 @@
     width: 100%;
     height: 100%;
     background-color: white;
+
     img {
       max-width: 100%;
       max-height: 85%;
       object-fit: contain;
     }
+
     .loading {
       font-size: 1rem;
     }
