--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -26,7 +26,7 @@
 <!-- Modal -->
 <div class="modal-container" [ngClass]="{'hidden': !modalImage}" (click)="onModalClick()" >
   <div class="modal-inner" >
-    <img class="small" [src]="enableFullImageUrl ? fullImageUrl : imageUrl" class="card-img-top" [alt]="product.name" (click)="onImageClick()" >
+    <img class="small" [src]="enableFullImageUrl ? fullImageUrl : imageUrl" class="card-img-top" [alt]="product.name" >
     <div class="modal-inner-text">
       {{ product.name }}
       <ng-container *ngTemplateOutlet="priceTemplate" ></ng-container>
