--- a/src/app/page/admin/admin.component.html
+++ b/src/app/page/admin/admin.component.html
@@ -1,1 +1,6 @@
-<app-data-editor></app-data-editor>
+<app-data-editor (showProductImage)="onImageShow($event)" ></app-data-editor>
+<app-image-modal 
+  [productName]="imageModalProduct.name" 
+  [imageFileName]="imageModalProduct.image"
+  [(visible)]="imageModalVisible"
+></app-image-modal>
