--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,20 @@
 // }
 
 body {
-    box-sizing: border-box;    
+    box-sizing: border-box; 
+    font-family: 'Rosario', Arial, Helvetica, sans-serif;   
 }
 
-.list-title {
+.category-title, .list-title {
     color: rgba(9,9,121,1) ;
+    font-family: 'Rosario', Arial, Helvetica, sans-serif;
     font-weight: bold;
+}
+
+h1, h2 {
+    font-family: 'Rosario', Arial, Helvetica, sans-serif;
+}
+
+nav {
+    font-family: 'Rosario', Arial, Helvetica, sans-serif;
 }
