új szűrők, admin select, js hozzáadása, css

--- a/src/app/common/data-editor/data-editor.component.html
+++ b/src/app/common/data-editor/data-editor.component.html
@@ -9,7 +9,7 @@
     <tr>
       <th *ngFor="let info of fs.info">
         {{ info.text }} <br>
-        <i (click)="thClick(info)" 
+        <i (click)="thClick(info)"
           [class]="[
             'fa',
             'fa-lg',
@@ -24,13 +24,16 @@
   <tbody>
     <tr *ngFor="let product of products | slice:startIdx:endIdx">
       <th scope="row">{{product.id}}</th>
-      <td *ngFor="let info of fs.info | slice:1">
-        <ng-container *ngIf="info.type === 'checkbox'; else elseBlock">
-          <input [disabled]="disabled" [class]="info.key" type="checkbox" [(ngModel)]="product[info.key]">
-        </ng-container>
-        <ng-template #elseBlock>
-          <input [disabled]="disabled" [class]="info.key" [type]="info.type" [(ngModel)]="product[info.key]">
-        </ng-template>
+      <td *ngFor="let info of fs.info | slice:1" [ngSwitch]="info.type">
+
+        <input *ngSwitchCase="'checkbox'" [disabled]="disabled" [class]="info.key" type="checkbox" [(ngModel)]="product[info.key]">
+
+        <select *ngSwitchCase="'select'" [disabled]="disabled" [class]="info.key" [(ngModel)]="product[info.key]">
+          <option *ngFor="let option of info.options" [value]="option.id">{{ option.name }}</option>
+        </select>
+
+        <input *ngSwitchDefault [disabled]="disabled" [class]="info.key" [type]="info.type" [(ngModel)]="product[info.key]">
+
       </td>
       <td>
         <div class="btn-group">
