--- a/src/app/common/product-card/product-card.component.html
+++ b/src/app/common/product-card/product-card.component.html
@@ -1,10 +1,10 @@
-<div class="card h-100">
+ <div class="card">
   <img [src]="imageUrl" class="card-img-top" [alt]="product.name" (click)="onImageClick()">
   <div class="card-body d-flex flex-column">
     <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">{{ product.description }}</p>
     <p class="card-text">stock: {{ product.stock }}</p>
-    <ng-container *ngTemplateOutlet="priceTemplate" ></ng-container>  
+    <ng-container *ngTemplateOutlet="priceTemplate" ></ng-container>
     <button (click)="onAddToCart()" class="btn btn-gradient mt-auto mx-auto">Add to cart</button>
   </div>
 </div>
