--- a/src/app/common/data-editor/data-editor.component.html
+++ b/src/app/common/data-editor/data-editor.component.html
@@ -1,22 +1,36 @@
 <div class="data-editor-pager btn-group">
-  <button [disabled]="first"class="btn btn-secondary" (click)="onPrevious()">&lt;&lt; Previous</button>
-  <button [disabled]="last" class="btn btn-secondary"  (click)="onNext()" >Next &gt;&gt;</button>
-</div >
-  <button class="btn btn-secondary ml-5"  (click)="createNew()">Add new</button>
-<br>
+  <button [disabled]="first" class="btn btn-secondary" (click)="onPrevious()">&lt;&lt; Previous</button>
+  <button [disabled]="last" class="btn btn-secondary" (click)="onNext()">Next &gt;&gt;</button>
+  <label class="mx-5">
+    ( From {{ startIdx + 1 }}. to {{ endIdx }}. ) / {{ products.length }}
+  </label>
+</div>
+<button class="btn btn-secondary ml-5" (click)="createNew()">Add new</button>
+<div class="form-inline w-100">
+  <div class="mr-auto">
+    Fiter
+    <select [(ngModel)]="filterKey" (ngModelChange)="onFilterChange()" class="form-control ml-2 mr-4" id="data-editor-filter-select">
+      <option [value]="''">No filter</option>
+      <option *ngFor="let info of fs.info" [value]="info.key">{{ info.text }}</option>
+    </select>
+    <ng-container *ngIf="filterIsBool; else elseBlock">
+      <input type="checkbox" [(ngModel)]="filterBool" (ngModelChange)="onFilterChange()" class="form-control ml-1">
+    </ng-container>
+    <ng-template #elseBlock>
+      <input [(ngModel)]="filterString" (ngModelChange)="onFilterChange()" class="form-control ml-1">
+    </ng-template>
+  </div>
+</div>
 <table class="table table-striped data-editor-table">
   <thead>
     <tr>
       <th *ngFor="let info of fs.info">
         {{ info.text }} <br>
-        <i (click)="thClick(info)" 
-          [class]="[
+        <i (click)="thClick(info)" [class]="[
             'fa',
             'fa-lg',
             (info == sortedInfo ? iNames[info.i * 2 + (revSort ? 0 : 1)] : 'fa-sort')
-          ]"
-          aria-hidden="true"
-        ></i>
+          ]" aria-hidden="true"></i>
       </th>
       <th>Operations</th>
     </tr>
@@ -43,8 +57,6 @@
     </tr>
   </tbody>
 </table>
-<div>
-  ( From {{ startIdx + 1 }}. to {{ endIdx }}. ) / {{ products.length }}
-</div>
 <!-- create new form -->
-<app-create-new-form [(visible)]="createNewFormIsVisible" (addProduct)="addProduct($event)" ></app-create-new-form>
+<app-create-new-form [(visible)]="createNewFormIsVisible" (addProduct)="addProduct($event)"
+  (showProductImage)="onShowImage($event)"></app-create-new-form>
