kategória oldal kiemelt termékek

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,65 +1,4 @@
-<app-featured-list [products]="products" class="mb-5"> </app-featured-list>
-<app-special-offer-list [products]="products" class="mb-5"></app-special-offer-list>
+<app-featured-list [products]="products | active" class="mb-5"> </app-featured-list>
+<app-special-offer-list [products]="products | active" class="mb-5"></app-special-offer-list>
 
-<app-product-list [products]="products" class="mb-5"></app-product-list>
-
-
-<!-- <div class="container">
-        <div class="row flex-column">
-          <h2>1</h2>
-          <div *ngFor="let product of data$ | async | frontend: 2 | random">
-            {{ product.name }}
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row flex-column">
-          <h2>2</h2>
-          <div
-            *ngFor="
-              let product of data$ | async | filter: { name: 'mona' } | random
-            "
-          >
-            {{ product.name }}
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row flex-column">
-          <h2>3</h2>
-          <div
-            *ngFor="
-              let product of data$
-                | async
-                | sorter: 'name':'descend'
-                | frontend: 10
-            "
-          >
-            {{ product.name }}
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row flex-column">
-          <h2>4</h2>
-          <div
-            *ngFor="
-              let product of data$ | async | filter: { specialOffer: true }
-            "
-          >
-            {{ product.name }} - {{ product.specialOffer }}
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row flex-column">
-          <h2>5</h2>
-          <div
-            *ngFor="
-              let product of data$ | async | active | sorter: 'name':'descend'
-            "
-          >
-            {{ product.name }} - {{ product.active }}
-          </div>
-        </div>
-      </div> -->
+<app-product-list [products]="products | active" class="mb-5"></app-product-list>
