--- a/src/app/page/cat02/cat02.component.html
+++ b/src/app/page/cat02/cat02.component.html
@@ -1,8 +1,13 @@
-<div class="container-flex">
+<h1 *ngIf="name" class="category-title">{{ name }} kategória termékei</h1>
 
-  <h1 *ngIf="name" class="category-title">{{ name }} kategória termékei</h1>
+<div class="container-flex" *ngIf="category && products|async">
+
+  <ng-container *ngIf="(products | async | active | filter: {featured:true,categoryId:category.id})?.length !== 0">
+    <app-featured-list *ngIf="category" [products]="products | async | active | filter:{featured:true,categoryId:category.id}" class="mb-5"> </app-featured-list>
+  </ng-container>
+
   <div class="row" *ngIf="products|async">
-    <app-product-list *ngIf="category" [products]="products | async | filter:{categoryId:category.id}"></app-product-list>
+    <app-product-list *ngIf="category" [products]="products | async | active | filter:{categoryId:category.id}"></app-product-list>
   </div>
 
   <ng-container *ngIf="categoryNotExists">
